app/globals.css
@charset "utf-8";
body {
	background-color: #CCC;
	text-align: left;
	margin-top: 0px;
	padding-top: 0px;
	font-family: calibri;
	color: #333;
	font-size: 14px;
}
#wrapper {
	max-width: 940px;
	width: 100%;
	margin-top: 15px;
	margin-right: auto;
	margin-left: auto;
	background-color: #FFF;
	padding: 0 10px;
	box-sizing: border-box;
}
#header {
}
#nav {
	height: 40px;
	background-color: #000;
}
.sidecities {
	font-size:12px;
}
.topcities {
	font-size:12px;
}
#cclogo {
	float: right;
	height: 40px;
	width: 100px;
	/* background-image: url(../images/cclogo.gif); */
	margin-right: 30px;
	background-repeat: no-repeat;
	left: 1076px;
	top: 174px;
}

#content {
	text-align: left;
	font-family: calibri;
	color: #333;
	font-size: 14px;
}
#footer {
	text-align: center;
	clear: both;
	font-family: calibri;
	font-size: 10px;
	font-weight: bold;
	color: #333;
	padding-top: 5px;
}
#logo {
	
	background-repeat: repeat-x;
	height: 198px;
}
#logocontainer {
	float: left;
	height: 30px;
	width: 173px;
	margin-top: 7px;
	margin-left: 15px;
}
#logocontent {
	float: right;
	height: 130px;
	width: 807px;
	margin-top: 7px;
	margin-right: 15px;
}
.logoheader {
	font-family: Geneva, sans-serif;
	font-size: 28px;
	font-weight: bold;
	color: #FFF;
}
.logotext {
	font-family: Geneva, sans-serif;
	font-size: 18px;
	font-weight: bold;
	color: #FF0;
}
.navtext {
	font-family: Geneva, sans-serif;
	font-size: 18px;
	font-weight: bold;
	color: #000;
	line-height: 37px;
}
h1 {
	color: #00487A;
	font-size: 22px;
	font-family: Geneva, sans-serif;
}
h2 {
	color: #00487A;
	font-size: 20px;
	font-family: Geneva, sans-serif;
}
h3 {
	color: #00487A;
	font-size: 16px;
	font-family: Geneva, sans-serif;
}
h4 {
	color: #00487A;
	font-size: 14px;
	font-family: Geneva, sans-serif;
}
#menu {
	text-align: left;
	float: left;
	height: 40px;
	padding-left: 30px;
}

a.nav:link {
	color: #FFF;
	text-decoration: none;
}
a.nav:visited {
	color: #FFF;
	text-decoration: none;
}
a.nav:hover {
	color: #98ca45;
	text-decoration: underline;
}
a.nav:active {
	color: #000;
} 
#leftcontent {
	float: left;
	width: 100%;
	max-width: 600px;
	margin-left: 20px;
	margin-top: 20px;
	background-color: #f8f8f8;
	border: 2px groove #00487a;
	line-height: 19px;
	height: auto;
}
#rightcontent {
	float: left;
	width: 100%;
	max-width: 275px;
	margin-top: 15px;
	height: auto;
	text-align: left;
	margin-left: 20px;
	/* background-image: url(../../images/formbg.jpg); */
	background-repeat: no-repeat;
}
#form {
	height: 550px;
	width: 250px;
	margin-right: auto;
	margin-left: 15px;
	text-align: left;
}

#leftcontenttext {
	float: left;
	width: 595px;
	margin-left: 5px;
	background-color: #f1f1f1;
	line-height: 19px;
	margin-right: 5px;
}
#map {
	text-align: center;
	height: auto;
	width: auto;
}

/* Mobile Responsive Styles */
@media (max-width: 768px) {
	#wrapper {
		margin-top: 0;
		padding: 0 5px;
	}
	
	#leftcontent {
		width: 100%;
		margin: 10px 0;
		float: none;
	}
	
	#rightcontent {
		width: 100%;
		margin: 10px 0;
		float: none;
	}
	
	#leftcontenttext {
		width: 100%;
		margin: 0;
		padding: 10px;
		box-sizing: border-box;
	}
	
	#form {
		width: 100%;
		margin: 0;
		padding: 10px;
		box-sizing: border-box;
	}
	
	#menu {
		padding-left: 10px;
	}
	
	.navtext {
		font-size: 14px;
	}
	
	table {
		width: 100% !important;
	}
	
	table img {
		max-width: 100%;
		height: auto;
	}
	
	input[type="text"], 
	textarea, 
	select {
		width: 100%;
		box-sizing: border-box;
	}
}
#cityzip {
	float: left;
	width: 835px;
	margin-left: 7px;
}
#contactleft {
	float: left;
	height: 450px;
	width: 300px;
	text-align: left;
	padding-left: 15px;
}
#contactright {
	float: right;
	height: auto;
	width: 400px;
	margin-top: 50px;
	margin-right: 75px;
}
.printlink {
	color: #4931A1;
	text-decoration: underline;
}
h5 {
	color: #00487A;
	font-size: 14px;
	font-family: Geneva, sans-serif;
}

#leftcontent {
	float: left;
	width: 100%;
	max-width: 600px;
	margin-left: 20px;
	margin-top: 20px;
	background-color: #f8f8f8;
	border: 2px groove #00487a;
	line-height: 19px;
	height: auto;
}
#rightcontent {
	float: left;
	width: 100%;
	max-width: 275px;
	margin-top: 15px;
	height: auto;
	text-align: left;
	margin-left: 20px;
	/* background-image: url(../../images/formbg.jpg); */
	background-repeat: no-repeat;
}
#form {
	height: 550px;
	width: 250px;
	margin-right: auto;
	margin-left: 15px;
	text-align: left;
}
#leftcontenttext {
	float: left;
	width: 595px;
	margin-left: 5px;
	background-color: #f1f1f1;
	line-height: 19px;
	margin-right: 5px;
}
a.nav {
	color: #FFF;
	text-decoration: none;
}
a.nav:hover {
	color: #FFF;
	text-decoration: underline;
}

